; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_log.c_libvlc_log_file.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_log.c_libvlc_log_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32*, i8*, i32)* @libvlc_log_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @libvlc_log_file(i8* %0, i32 %1, i32* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %11, align 8
  %14 = load i32*, i32** %11, align 8
  %15 = call i32 @flockfile(i32* %14)
  %16 = load i32*, i32** %11, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @vfprintf(i32* %16, i8* %17, i32 %18)
  %20 = load i32*, i32** %11, align 8
  %21 = call i32 @fputc(i8 signext 10, i32* %20)
  %22 = load i32*, i32** %11, align 8
  %23 = call i32 @funlockfile(i32* %22)
  %24 = load i32, i32* %7, align 4
  %25 = load i32*, i32** %8, align 8
  ret void
}

declare dso_local i32 @flockfile(i32*) #1

declare dso_local i32 @vfprintf(i32*, i8*, i32) #1

declare dso_local i32 @fputc(i8 signext, i32*) #1

declare dso_local i32 @funlockfile(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
